force-app/main/default/objects/Lead/fields/Accutrac__c.field-meta.xml
<CustomField>
    <fullName>Accutrac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accutrac</label>
    <type>Checkbox</type>
</CustomField>