force-app/main/default/objects/Lead/fields/ADP__c.field-meta.xml
<CustomField>
    <fullName>ADP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>ADP</label>
    <type>Checkbox</type>
</CustomField>