force-app/main/default/objects/Lead/fields/Apex_CRM__c.field-meta.xml
<CustomField>
    <fullName>Apex_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex (CRM)</label>
    <type>Checkbox</type>
</CustomField>