force-app/main/default/objects/Lead/fields/Automating_provisioning_workflow__c.field-meta.xml
<CustomField>
    <fullName>Automating_provisioning_workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Challenge choice</description>
    <label>Provisioning</label>
    <type>Checkbox</type>
</CustomField>