force-app/main/default/objects/Lead/fields/Blackberries__c.field-meta.xml
<CustomField>
    <fullName>Blackberries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blackberries</label>
    <type>Checkbox</type>
</CustomField>