force-app/main/default/objects/Lead/fields/CMS__c.field-meta.xml
<CustomField>
    <fullName>CMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>CMS</label>
    <type>Checkbox</type>
</CustomField>