force-app/main/default/objects/Lead/fields/Conflicts_System__c.field-meta.xml
<CustomField>
    <fullName>Conflicts_System__c</fullName>
    <label>Conflicts System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>Autonomy Conflicts Manager</fullName>
            </value>
            <value>
                <fullName>Compliguard Conflicts</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Elite Conflicts</fullName>
            </value>
            <value>
                <fullName>LegalKEY Conflicts</fullName>
            </value>
            <value>
                <fullName>MDY Conflicts</fullName>
            </value>
            <value>
                <fullName>ADERANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>