force-app/main/default/objects/Lead/fields/Contact_Management__c.field-meta.xml
<CustomField>
    <fullName>Contact_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Challenge choice</description>
    <label>Contact management</label>
    <type>Checkbox</type>
</CustomField>