force-app/main/default/objects/Lead/fields/Custom_Extranet_Portal__c.field-meta.xml
<CustomField>
    <fullName>Custom_Extranet_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Custom Extranet or Portal</label>
    <type>Checkbox</type>
</CustomField>