force-app/main/default/objects/Lead/fields/Data_audit_and_cleansing__c.field-meta.xml
<CustomField>
    <fullName>Data_audit_and_cleansing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Challenge choice</description>
    <label>Data audit and cleansing</label>
    <type>Checkbox</type>
</CustomField>