force-app/main/default/objects/Lead/fields/Directory_services_across_applications__c.field-meta.xml
<CustomField>
    <fullName>Directory_services_across_applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Challenge choice</description>
    <label>Directory services</label>
    <type>Checkbox</type>
</CustomField>