force-app/main/default/objects/Lead/fields/DOCS_Open__c.field-meta.xml
<CustomField>
    <fullName>DOCS_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>DOCS Open/DM5</label>
    <type>Checkbox</type>
</CustomField>