force-app/main/default/objects/Lead/fields/engagio__Department__c.field-meta.xml
<CustomField>
    <fullName>engagio__Department__c</fullName>
    <description>Department</description>
    <label>Department</label>
    <length>128</length>
    <type>Text</type>
</CustomField>