force-app/main/default/objects/Lead/fields/engagio__FirstEngagementDate__c.field-meta.xml
<CustomField>
    <fullName>engagio__FirstEngagementDate__c</fullName>
    <description>First engagement date</description>
    <label>First Engagement Date</label>
    <type>DateTime</type>
</CustomField>