force-app/main/default/objects/Lead/fields/engagio__LastPlay__c.field-meta.xml
<CustomField>
    <fullName>engagio__LastPlay__c</fullName>
    <label>Last Play (Finished Step)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>