force-app/main/default/objects/Lead/fields/engagio__LeftCompany__c.field-meta.xml
<CustomField>
    <fullName>engagio__LeftCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Company</label>
    <type>Checkbox</type>
</CustomField>