force-app/main/default/objects/Lead/fields/engagio__Match_Time__c.field-meta.xml
<CustomField>
    <fullName>engagio__Match_Time__c</fullName>
    <label>Match Time</label>
    <type>DateTime</type>
</CustomField>