force-app/main/default/objects/Lead/fields/engagio__Matched_Account_EngageMinsLast3Months__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_EngageMinsLast3Months__c</fullName>
    <description>Matched Account Engagement minutes in the last 3 months</description>
    <formula>engagio__Matched_Account__r.engagio__EngagementMinutesLast3Months__c</formula>
    <label>Matched Account Engagement Mins (3 mo.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>