force-app/main/default/objects/Lead/fields/engagio__Matched_Account_Engagio_Status__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_Engagio_Status__c</fullName>
    <description>Matched Account Engagio Status From Engagio Lead to Account Matching</description>
    <formula>engagio__Matched_Account__r.engagio__Status__c</formula>
    <label>Matched Account Demandbase Journey Stage</label>
    <type>Text</type>
</CustomField>