force-app/main/default/objects/Lead/fields/engagio__Matched_Account_HQ_State__c.field-meta.xml
<CustomField>
    <fullName>engagio__Matched_Account_HQ_State__c</fullName>
    <description>Matched Account HQ State From Engagio Lead to Account Matching</description>
    <formula>engagio__Matched_Account__r.BillingState</formula>
    <label>Matched Account HQ State</label>
    <type>Text</type>
</CustomField>