force-app/main/default/objects/Lead/fields/Equitrac__c.field-meta.xml
<CustomField>
    <fullName>Equitrac__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equitrac</label>
    <type>Checkbox</type>
</CustomField>