force-app/main/default/objects/Lead/fields/Event_Driven_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Event_Driven_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Driven Reporting</label>
    <type>Checkbox</type>
</CustomField>