force-app/main/default/objects/Lead/fields/Explicit_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For ticket #38821</description>
    <label>Explicit Opt-in</label>
    <type>Checkbox</type>
</CustomField>