force-app/main/default/objects/Lead/fields/iManage__c.field-meta.xml
<CustomField>
    <fullName>iManage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Interwoven/iManage</label>
    <type>Checkbox</type>
</CustomField>