force-app/main/default/objects/Lead/fields/Informix__c.field-meta.xml
<CustomField>
    <fullName>Informix__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Informix</label>
    <type>Checkbox</type>
</CustomField>