force-app/main/default/objects/Lead/fields/Lawson_HR__c.field-meta.xml
<CustomField>
    <fullName>Lawson_HR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lawson (HR)</label>
    <type>Checkbox</type>
</CustomField>