force-app/main/default/objects/Lead/fields/LMS__c.field-meta.xml
<CustomField>
    <fullName>LMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rippe &amp; Kingston / LMS</label>
    <type>Checkbox</type>
</CustomField>