force-app/main/default/objects/Lead/fields/Lotus_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lotus_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Lotus Notes</label>
    <type>Checkbox</type>
</CustomField>