force-app/main/default/objects/Lead/fields/Matched_Tier__c.field-meta.xml
<CustomField>
    <fullName>Matched_Tier__c</fullName>
    <formula>TEXT(engagio__Matched_Account__r.Legal_Tier_Split__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Tier</label>
    <type>Text</type>
</CustomField>