force-app/main/default/objects/Lead/fields/Metastorm__c.field-meta.xml
<CustomField>
    <fullName>Metastorm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metastorm</label>
    <type>Checkbox</type>
</CustomField>