force-app/main/default/objects/Lead/fields/Novell_NDS__c.field-meta.xml
<CustomField>
    <fullName>Novell_NDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Novell NDS</label>
    <type>Checkbox</type>
</CustomField>