force-app/main/default/objects/Lead/fields/p2s_base1__ConversionGeneratedAccount__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ConversionGeneratedAccount__c</fullName>
    <formula>TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ConversionGeneratedAccount</label>
    <type>Checkbox</type>
</CustomField>