force-app/main/default/objects/Lead/fields/p2s_base1__MostRecentCampaign__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MostRecentCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the campaign that was most recently added to the lead (as a campaign member)</description>
    <inlineHelpText>This is the campaign that was most recently added to the lead (as a campaign member)</inlineHelpText>
    <label>Most Recent Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Most Recent Leads</relationshipLabel>
    <relationshipName>MostRecentLeads</relationshipName>
    <type>Lookup</type>
</CustomField>