force-app/main/default/objects/Lead/fields/PATTSY__c.field-meta.xml
<CustomField>
    <fullName>PATTSY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PATTSY</label>
    <type>Checkbox</type>
</CustomField>