force-app/main/default/objects/Lead/fields/PeopleSoft__c.field-meta.xml
<CustomField>
    <fullName>PeopleSoft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>PeopleSoft</label>
    <type>Checkbox</type>
</CustomField>