force-app/main/default/objects/Lead/fields/Plumtree__c.field-meta.xml
<CustomField>
    <fullName>Plumtree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plumtree</label>
    <type>Checkbox</type>
</CustomField>