force-app/main/default/objects/Lead/fields/ProLaw_PM__c.field-meta.xml
<CustomField>
    <fullName>ProLaw_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProLaw (PM)</label>
    <type>Checkbox</type>
</CustomField>