force-app/main/default/objects/Lead/fields/Synchronizing_applications__c.field-meta.xml
<CustomField>
    <fullName>Synchronizing_applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Challenge choice</description>
    <label>Synchronizing data stores</label>
    <type>Checkbox</type>
</CustomField>