force-app/main/default/objects/Lead/fields/Time_Tracks__c.field-meta.xml
<CustomField>
    <fullName>Time_Tracks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Time Tracks</label>
    <type>Checkbox</type>
</CustomField>