force-app/main/default/objects/Lead/fields/Tsunami_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Tsunami_Lead_Type__c</fullName>
    <label>Intapp Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Unsure of Action</fullName>
                <default>true</default>
                <label>Unsure of Action</label>
            </value>
            <value>
                <fullName>Awaiting Identity Confirmation</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Convert</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>630 Priority</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Technology Partnership Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>