force-app/main/default/objects/Lead/fields/Ultipro__c.field-meta.xml
<CustomField>
    <fullName>Ultipro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ultipro</label>
    <type>Checkbox</type>
</CustomField>