force-app/main/default/objects/Lead/fields/VOIP__c.field-meta.xml
<CustomField>
    <fullName>VOIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>VOIP</label>
    <type>Checkbox</type>
</CustomField>