force-app/main/default/objects/Lead/recordTypes/SuspectLead.recordType-meta.xml
<RecordType>
    <fullName>SuspectLead</fullName>
    <active>true</active>
    <businessProcess>Suspect Lead Qualification Process</businessProcess>
    <description>Use this Lead record type to identify the Leads generated by the Suspect Webinar events</description>
    <label>Suspect Lead</label>
</RecordType>