force-app/main/default/objects/Lead/listViews/Unassigned_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Unassigned_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>engagio__Matched_Account__c</columns>
    <columns>p2s_base1__MatchedAccount__c</columns>
    <columns>engagio__Matched_Account_Name__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Not in Target Market,Invalid Contact</value>
    </filters>
    <filters>
        <field>engagio__Matched_Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Lead Queue</label>
    <language>en_US</language>
    <queue>Unassigned_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>